0.8.5 (24.01.2018)
================
* fix tests for systems with no long doubles support
* new arguments and small improvements in 'write_labelled_csv'/'write_labelled_sps'
* minor fixes
* change behavior of 'vlookup'/'vlookup_df' - now it also matches on NA


0.8.4 (11.12.2017)
================
* compatibility with new version of htmlTable package
* minor fixes

0.8.3 (06.11.2017)
================
* add 'calc_cro_*' functions family
* minor fixes
* compatibility with new version of 'testthat' package

0.8.2 (26.09.2017)
================
* fix bug with single column "mrset"
* fix bug with significance tests on tables with complex headers
* add uboxing possibilities for ..[] (..[] = list/data.frame will create separate variables from that list/data.frame)
* add 'from_text' for creation data.frame from text lines
* improve performance of 'cro_*'
* remove deprecated function ".set"

0.8.1 (10.08.2017)
================
* add significance testing (see ?significance)
* add support for table output for Jupyter notebooks
* add 'use_labels' function for experimental support variable labels in base R functions and third party packages (see ?use_labels)
* increase table functions performance
* increase 'as.dichotomy'/'dummy' performance
* increase 'vlookup'/'vlookup_df' performance
* numerous bugfixes
* now 'keep'/'except'/'by_groups' operate with NSE. For standard evaluation just surround you variable with round brackets
* add print options 'commented' for printing tables to console with '#'
* add functions 'split_separate'/'split_off'
* add 'prepend_names'/'prepend_labels' - issue #2
* add 'indirect'/'indirect_list' - aliases for 'vars'/'vars_list'
* add 'mis_val' - alias for 'na_if'
* add 'unsafe' argument for *_fun/*_fun_df.
* add '..' object for parameter substitution inside 'compute' and etc. Usage: '..$param_name'. For details: ?..
* improve 'lst' function
* '.set'/'set' inside 'compute' and etc. are deprecated. Use '%into%' instead.