@@ -42,6 +42,8 @@ S3method(as.category,default)
 S3method(as.category,matrix)
 S3method(as.character,labelled)
 S3method(as.data.frame,labelled)
+S3method(as.datatable_widget,default)
+S3method(as.datatable_widget,etable)
 S3method(as.dichotomy,default)
 S3method(as.double,labelled)
 S3method(as.etable,data.frame)
@@ -77,8 +79,6 @@ S3method(column,data.frame)
 S3method(column,default)
 S3method(column,list)
 S3method(column,matrix)
-S3method(datatable,default)
-S3method(datatable,etable)
 S3method(do_repeat_internal,data.frame)
 S3method(do_repeat_internal,list)
 S3method(drop_empty_columns,data.frame)
@@ -334,6 +334,7 @@ export(apply_var_labs)
 export(as.category)
 export(as.criterion)
 export(as.data.table)
+export(as.datatable_widget)
 export(as.dichotomy)
 export(as.dtfrm)
 export(as.etable)
@@ -381,8 +382,6 @@ export(cro_spearman)
 export(cro_sum)
 export(cro_tpct)
 export(data.table)
-export(dataTableAjax)
-export(dataTableOutput)
 export(datatable)
 export(default_dataset)
 export(do_if)
@@ -510,7 +509,6 @@ export(read_spss_to_list)
 export(recode)
 export(ref)
 export(regex)
-export(renderDataTable)
 export(repr_html.etable)
 export(repr_text.etable)
 export(sd_col)
@@ -628,11 +626,9 @@ export(write_labelled_tab)
 export(write_labelled_tab2)
 export(write_labels)
 export(write_labels_spss)
-import(DT)
 import(data.table)
 import(foreign)
 import(htmlTable)
-import(htmltools)
 import(magrittr)
 import(matrixStats)
 import(stats)
