@@ -1,13 +1,16 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/html_datatable.R
-\name{datatable}
+\name{as.datatable_widget}
+\alias{as.datatable_widget}
 \alias{datatable}
-\alias{datatable.etable}
+\alias{as.datatable_widget.etable}
 \title{Create an HTML table widget for usage with Shiny}
 \usage{
+as.datatable_widget(data, ...)
+
 datatable(data, ...)
 
-\method{datatable}{etable}(data, repeat_row_labels = FALSE,
+\method{as.datatable_widget}{etable}(data, repeat_row_labels = FALSE,
   show_row_numbers = FALSE, digits = get_expss_digits(), ...)
 }
 \arguments{
@@ -69,7 +72,7 @@ shinyApp(
     ui = fluidPage(fluidRow(column(12, DT::dataTableOutput('tbl')))),
     server = function(input, output) {
         output$tbl = DT::renderDataTable(
-            datatable(mtcars_table)
+            as.datatable_widget(mtcars_table)
         )
     }
 )
